--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,15 @@ python:
   - "3.3"
   - "3.4"
   - "3.5"
-before_install:
-  - pip install .
+addons:
+  apt:
+    sources:
+    - ubuntu-toolchain-r-test
+    packages:
+    - gcc-5
+    - g++-5
+install:
+  - CC=gcc-5 CXX=g++-5 python setup.py install
 script:
   - py.test
 
