--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,4 @@
-language: python
-python:
-  - "2.7"
-  - "3.2"
-  - "3.3"
-  - "3.4"
-  - "3.5"
+language: cpp
 addons:
   apt:
     sources:
@@ -16,4 +10,3 @@ install:
   - python setup.py install
 script:
   - CC=gcc-5 CXX=g++-5 py.test
-
