--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,6 @@ addons:
     - gcc-5
     - g++-5
 install:
-  - python setup.py install
+  - sudo python setup.py install
 script:
   - CC=gcc-5 CXX=g++-5 py.test
