pip install -e . before running py.test in CI

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -29,5 +29,6 @@ jobs:
         black . 
     - name: Test with pytest
       run: |
+        pip install --no-use-pep517 --no-deps --disable-pip-version-check -e .
         py.test
 
