--- a/.github/workflows/lint_and_test.yml
+++ b/.github/workflows/lint_and_test.yml
@@ -1,4 +1,4 @@
-name: Lint and Test
+name: Test
 
 on: [push]
 
@@ -7,13 +7,15 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       max-parallel: 5
+      matrix:
+        python-version: [3.6, 3.7, 3.8, 3.9]
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python 3.8
+    - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
       with:
-        python-version: 3.8
+        python-version: ${{ matrix.python-version }}
     - name: Add conda to system path
       run: |
         # $CONDA is an environment variable pointing to the root of the miniconda directory
@@ -21,14 +23,10 @@ jobs:
     - name: Install dependencies
       run: |
         conda env update --file environment.yml --name base
-    - name: Lint with flake8
-      run: |
-        flake8 . 
-    - name: Check formatting with black
-      run: |
-        black . 
-    - name: Test with pytest
+    - name: Install cppimport
       run: |
         pip install --no-use-pep517 --no-deps --disable-pip-version-check -e .
+    - name: Test
+      run: |
         py.test
 
