--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,30 +3,35 @@ name: Test
 on: [push]
 
 jobs:
-  build-linux:
+  test:
+    name: Test (${{ matrix.python-version }}, ${{ matrix.os }})
     strategy:
-      max-parallel: 5
+      fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest]
-        python-version: [3.6, 3.7, 3.8, 3.9]
+        os: ["ubuntu-latest", "macos-latest", "windows-latest"]
+        python-version: ["3.6", "3.7", "3.8", "3.9"]
     runs-on:  ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
+    - uses: conda-incubator/setup-miniconda@v2
       with:
+        auto-update-conda: true
         python-version: ${{ matrix.python-version }}
-    - name: Add conda to system path
-      run: |
-        # $CONDA is an environment variable pointing to the root of the miniconda directory
-        echo $CONDA/bin >> $GITHUB_PATH
     - name: Install dependencies
       run: |
-        conda env update --file environment.yml --name base
+        conda env update -f environment.yml -n test
     - name: Install cppimport
       run: |
         pip install --no-use-pep517 --no-deps --disable-pip-version-check -e .
+    - name: Lint with flake8
+      run: |
+        flake8 . 
+    - name: Check formatting with black
+      run: |
+        black --check . 
+    - name: Check import ordering with isort
+      run: |
+        isort --check . 
     - name: Test
       run: |
         py.test
-
