--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,12 +10,16 @@ jobs:
       matrix:
         os: ["ubuntu-latest", "macos-latest", "windows-latest"]
         python-version: ["3.6", "3.7", "3.8", "3.9"]
+    defaults:
+      run:
+        shell: bash -l {0}
     runs-on:  ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v2
     - uses: conda-incubator/setup-miniconda@v2
       with:
-        auto-update-conda: true
+        mamba-version: "*"
+        channels: conda-forge,defaults
         activate-environment: test
         environment-file: environment.yml
         python-version: ${{ matrix.python-version }}
