--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,23 +4,23 @@ on: [push]
 
 jobs:
   test:
-    name: Test (${{ matrix.python-version }}, ${{ matrix.os }})
     strategy:
       fail-fast: false
       matrix:
         os: ["ubuntu-latest", "macos-latest", "windows-latest"]
         python-version: ["3.6", "3.7", "3.8", "3.9"]
+    name: Test (${{ matrix.python-version }}, ${{ matrix.os }})
+    runs-on:  ${{ matrix.os }}
     defaults:
       run:
         shell: bash -l {0}
-    runs-on:  ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v2
     - uses: conda-incubator/setup-miniconda@v2
       with:
         mamba-version: "*"
-        channels: conda-forge,defaults
-        activate-environment: test
+        channels: conda-forge
+        activate-environment: cppimport
         environment-file: environment.yml
         python-version: ${{ matrix.python-version }}
     - name: Install cppimport
