--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,7 +7,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: ["ubuntu-latest", "macos-latest", "windows-latest"]
+        os: ["ubuntu-latest", "macos-latest"]
         python-version: ["3.6", "3.7", "3.8", "3.9"]
     name: Test (${{ matrix.python-version }}, ${{ matrix.os }})
     runs-on:  ${{ matrix.os }}
@@ -23,7 +23,12 @@ jobs:
         activate-environment: cppimport
         environment-file: environment.yml
         python-version: ${{ matrix.python-version }}
+    - name: Install cppimport on Mac
+      if: ${{ matrix.os == 'macos-latest' }}
+      run: |
+        CFLAGS='-stdlib=libc++' pip install --no-use-pep517 --no-deps --disable-pip-version-check -e .
     - name: Install cppimport
+      if: ${{ matrix.os != 'macos-latest' }}
       run: |
         pip install --no-use-pep517 --no-deps --disable-pip-version-check -e .
     - name: Lint with flake8
