Add coverage to CI.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -42,4 +42,8 @@ jobs:
     - name: Test
       if: ${{ matrix.os != 'macos-latest' }}
       run: |
-        pytest
+        pytest --cov=./
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v1
+      with:
+        fail_ci_if_error: true
