--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,12 @@
 *.so
 *.cppimporthash
 .rendered.*
-.cpprunfiles
 __pycache__
 build
 cppimport.egg-info
 dist
 .cache
 .tox
+.mypy_cache/
+.coverage
+htmlcov
