Specify build backend as setuptools.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,8 @@ profile = "black"
 addopts = "-s --tb=short"
 
 [build-system]
-requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
+requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
+build-backend = "setuptools.build_meta"
 
 [tool.setuptools_scm]
 version_scheme = "post-release"
