--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,6 @@
 include README.md
 include VERSION
-recursive-include tests *
+recursive-include tests *.py
+recursive-include tests *.h
+recursive-include tests *.cpp
+recursive-include tests *.c
