--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,3 +10,4 @@ build-backend = "setuptools.build_meta"
 
 [tool.setuptools_scm]
 version_scheme = "post-release"
+write_to = "cppimport/_version.py"
