--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -83,3 +83,12 @@ jobs:
       with:
         password: ${{ secrets.PYPI_API_TOKEN }}
         verbose: true
+    - name: Check published package
+      if: startsWith(github.ref, 'refs/tags')
+      run: |
+        mamba create -n testenv python=3 pip
+        conda activate testenv
+        pip install --force-reinstall --no-cache cppimport
+        pushd tests
+        python -c 'import cppimport; assert(cppimport.imp("mymodule").add(1,2) == 3);'
+        popd
